# ros2-cmake-example-project

./: .gitignore  README.md
launch/: launch_example.py
src/cpp_module_1/: package.xml
src/cpp_module_1/include/: first_node.hpp
src/cpp_module_1/src/: first_node.cpp
src/cpp_module_2/: CMakeLists.txt  package.xml
src/cpp_module_2/include/: second_node.hpp
src/cpp_module_2/src/: second_node.cpp
src/cpp_package_1/: CMakeLists.txt
src/py_module_3/: setup.cfg
src/py_module_3/pymodule/: plotter_node.py
src/py_package_3/: package.xml  setup.py
